edit html darkgray

--- a/app/views/html_template/index.html
+++ b/app/views/html_template/index.html
@@ -6,7 +6,7 @@
     <title>Family Rails</title>
     <link src="./css/style.css">
     <style>
-      body {background-color: gray;}
+      body {background-color: darkgray;}
     </style>
   </head>
   <body >
