--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,1 +1,32 @@
-p index page
+doctype html
+html[lang="ja"]
+  head
+    meta[charset="UTF-8"]
+    meta[name="viewport" content="width=device-width, initial-scale=1.0"]
+    title
+      | Family Rails
+    link[src="./css/style.css"]
+    style
+      |  body {background-color: darkgray;}
+  body
+    .container
+      header
+        .logo
+          | Family Rails
+      main
+        .btn_1
+          a[href="#"]
+          p
+            | おかあさんの日記
+        .btn_2
+          a[href="#"]
+          p
+            | 未定
+        .btn_3
+          a[href="#"]
+          p
+            | 未定
+        .btn_4
+          a[href="#"]
+          p
+            | 未定
