--- a/app/views/books/new.html.slim
+++ b/app/views/books/new.html.slim
@@ -1,4 +1,6 @@
 .content
+  = link_to '#' do
+    .button GoogleBooksから追加する
   = form_with url: books_path do |form|
     .class title
     = form.text_field :title
