--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -7,9 +7,9 @@
         th title
         th price
         th author
-        th link
         th rent user
         th publisher
+        th latest_rent_date
         th colspan="2"
     tbody
       - @books.each do |book|
@@ -17,17 +17,19 @@
           td = book["attributes"]["title"]
           td = book["attributes"]["price"]
           td = book["attributes"]["author"]
-          td = book["attributes"]["link"]
           td = book["attributes"]["rent-user"] || '貸出可'
           td = book["attributes"]["publisher-name"]
+          td = book["attributes"]["latest-rent-date"]
           td = link_to edit_book_path(book["id"]) do
                .button 編集
           td = link_to edit_book_path(book["id"]) do
                .button 削除
           td = link_to edit_book_path(book["id"]) do
                .button 編集
-          td = form_with method: :patch, url: rent_book_path(book["id"]) do |form|
-               = hidden_field_tag :uid, current_user.id
-               = form.submit "借りる"
-          td = form_with method: :patch, url: return_book_path(book["id"]) do |form|
-               = form.submit "返す"
+          - if book["attributes"]["rent-user"] == nil
+            td = form_with method: :patch, url: rent_book_path(book["id"]) do |form|
+                 = hidden_field_tag :uid, current_user.id
+                 = form.submit "借りる"
+          - else
+            td = form_with method: :patch, url: return_book_path(book["id"]) do |form|
+                 = form.submit "返す"
