fix registration user

--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -3,6 +3,8 @@ sass:
     border: solid 1px #666
 
 .content
+  = link_to root_path do
+    .button トップに戻る
   = link_to new_book_path do
     .button 本を追加する
   table
