--- a/app/views/api/users/new.html.slim
+++ b/app/views/api/users/new.html.slim
@@ -1,5 +1,5 @@
 .content
-  = form_with url: users_path do |form|
+  = form_with url: api_users_path do |form|
     .class nickname
     = form.text_field :nickname
     = hidden_field_tag :uid, current_user.id
