--- a/app/views/books/new_book_search.html.slim
+++ b/app/views/books/new_book_search.html.slim
@@ -1,6 +1,6 @@
 .content
   = form_with url: predictive_search_books_path, method: :get, local: true do |form|
-    .class target (english only)
+    .class target
     = form.text_field :target
     .class
     = form.submit
